Fixed some typos

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -37,10 +37,10 @@
 								<label for="lvl-inp">Difficulty:</label>
 								<div class="lvl-l">
 									<div class="lvl-e lvl-0 lvl-s">
-										Begginer
+										Beginner
 									</div>
 									<div class="lvl-e lvl-1">
-										Intermidiate
+										Intermediate
 									</div>
 									<div class="lvl-e lvl-2">
 										Advanced
